finalização de upload de avatar para cada usuario
